Curious if tests run with updated ts-config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,11 @@
     "noEmit": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "types": ["app/javascript/declarations"]
+    "types": ["app/javascript/declarations"],
+    "baseUrl": "app/javascript",
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "exclude": [
     "**/*.spec.ts",
