--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": ["es6", "dom", "es2018.promise", "es2017"],
+    "lib": ["es6", "dom", "DOM.Iterable", "es2018.promise", "es2017"],
     "module": "es2020",
     "moduleResolution": "node",
     "sourceMap": true,
