--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@stripe/react-stripe-js": "1.4.1",
     "@stripe/stripe-js": "^1.15.1",
     "@tippyjs/react": "^4.2.5",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@xstate/react": "^1.3.1",
     "abortcontroller-polyfill": "^1.7.3",
     "ace-builds": "^1.4.12",
@@ -68,6 +69,7 @@
     "react-dom": "^16.13.1",
     "react-error-boundary": "^3.1.0",
     "react-fast-compare": "^3.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-image-crop": "^8.6.9",
     "react-modal": "^3.13.1",
     "react-popper": "^2.2.3",
