--- a/config/sidekiq-schedule.yml
+++ b/config/sidekiq-schedule.yml
@@ -49,9 +49,9 @@ sync_tracks:
   class: "SyncTracksJob"
   queue: dribble
 
-sync_team_permissions:
+sync_team_members:
   cron: "0 1 * * 3"
-  class: "SyncTeamPermissionsJob"
+  class: "SyncTeamMembersJob"
   queue: dribble
 
 # 1am Thursday
