--- a/.github/workflows/pause-community-contributions.yml
+++ b/.github/workflows/pause-community-contributions.yml
@@ -7,7 +7,6 @@ on:
   pull_request_target:
     types:
       - opened
-  workflow_dispatch:
 
 permissions:
   issues: write
@@ -20,4 +19,4 @@ jobs:
     with:
       forum_category: support
     secrets:
-      COMMUNITY_CONTRIBUTIONS_WORKFLOW: ${{ secrets.COMMUNITY_CONTRIBUTIONS_WORKFLOW  }}
+      github_membership_token: ${{ secrets.COMMUNITY_CONTRIBUTIONS_WORKFLOW  }}
