--- a/config/sidekiq-schedule.yml
+++ b/config/sidekiq-schedule.yml
@@ -59,6 +59,11 @@ sync_team_members:
   class: "SyncTeamMembersJob"
   queue: dribble
 
+sync_sponsors:
+  cron: "0 1 * * 3"
+  class: "SyncSponsorsJob"
+  queue: dribble
+
 # 1am Thursday
 update_median_wait_times:
   cron: "0 1 * * 4"
