--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.0.2",
     "postcss-nesting": "^10.0.3",
+    "postcss-reuse": "^2.2.0",
     "prop-types": "^15.7.2",
     "qs": "^6.9.6",
     "react": "^16.13.1",
