--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -74,6 +74,7 @@ Style/ConditionalAssignment:
 
 Style/FormatString:
   EnforcedStyle: percent
+  Enabled: false
 
 Style/StringLiterals:
   Enabled: false
