Add setting of discord roles (#3585)
* Add setting of discord roles

* Add missing files

* Bad rubocop

* Bad rubocop

* Disable annoying rule

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -72,6 +72,10 @@ Style/ConditionalAssignment:
   SingleLineConditionsOnly: false
   IncludeTernaryExpressions: false
 
+Style/FormatString:
+  EnforcedStyle: percent
+  Enabled: false
+
 Style/StringLiterals:
   Enabled: false
 
