--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,7 +1,7 @@
-# What does this do?
-# https://stackoverflow.com/a/56631458/856688
+# worker_processes  auto;
+# worker_rlimit_nofile 8192; # 2x worker_connections
 events {
-  worker_connections  2048;  ## Default: 1024
+  worker_connections  4096;  # Default: 1024
 }
 
 http {
