--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,13 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # Cache used for docker
 .cache
