--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -151,22 +151,16 @@ jobs:
       # Checkout using GitHub's checkout action
       - uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab
 
-      ###
-      # Setup Ruby
       - name: Set up Ruby
         uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
         with:
           ruby-version: .ruby-version
           bundler-cache: true
 
-      ###
-      # Update package lists
       - name: Update package lists
         run: sudo apt-get update
 
-      ###
-      # Install graphicsmagick
-      - name: Install graphicsmagick
+      - name: Install packages
         run: sudo apt-get install graphicsmagick libvips
 
       ###
