Add more bullet config and fixes (#5319)
* Add more bullet config

WIP

WIP

Catch more things

Fix typo

Further tweaks

Add a current

Remove memoization for now

Eager load exercise and track for site updates

Eager load track for hero of journey page

Eager load student and mentor in mentor_discussions_controller

Fix omniauth test failures

* Stop Bullet moaning about current_user n+1s

* Fix bad bullet

* Fix mistake

* Fix another includes

* Add libvips

* Cleanup

* Add name

* Install libvips

* Fix false positives

* More tweaks

* Don't raise on missing favicons

* Fix more things

* Feck me

* Don't error on redirects

* Final one?

---------

Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -147,27 +147,20 @@ jobs:
           - 9200
 
     steps:
-      ###
-      # Checkout using GitHub's checkout action
-      - uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab
+      - name: Checkout code
+        uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab
 
-      ###
-      # Setup Ruby
       - name: Set up Ruby
         uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
         with:
           ruby-version: .ruby-version
           bundler-cache: true
 
-      ###
-      # Update package lists
       - name: Update package lists
         run: sudo apt-get update
 
-      ###
-      # Install graphicsmagick
-      - name: Install graphicsmagick
-        run: sudo apt-get install graphicsmagick
+      - name: Install packages
+        run: sudo apt-get install graphicsmagick libvips
 
       ###
       # Caching using GitHub's caching action
@@ -310,6 +303,12 @@ jobs:
         with:
           ruby-version: .ruby-version
           bundler-cache: true
+
+      - name: Update package lists
+        run: sudo apt-get update
+
+      - name: Install packages
+        run: sudo apt-get install libvips
 
       ###
       # Caching using GitHub's caching action
