Add to more places

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -205,6 +205,7 @@ jobs:
           EXERCISM_CI: true
           AWS_PORT: ${{ job.services.aws.ports['4566'] }}
           MYSQL_PORT: ${{ job.services.mysql.ports['3306'] }}
+          MONGODB_URL: "127.0.0.1:27017"
         run: |
           bundle exec rails r bin/monitor-manifest
           bundle exec rails test:prepare
@@ -359,6 +360,7 @@ jobs:
           EXERCISM_CI: true
           AWS_PORT: ${{ job.services.aws.ports['4566'] }}
           MYSQL_PORT: ${{ job.services.mysql.ports['3306'] }}
+          MONGODB_URL: "127.0.0.1:27017"
         run: |
           bundle exec rails r bin/monitor-manifest
           bundle exec rails test:prepare
@@ -437,5 +439,6 @@ jobs:
         env:
           RAILS_ENV: test
           EXERCISM_CI: true
+          MONGODB_URL: "127.0.0.1:27017"
         run: bundle exec rails r bin/monitor-manifest
           bundle exec rails test:prepare
