Create Perks and Partners (#3699)
* Create Supporting Orgs table

* Add basic tests, scope

* Add pages, setup correct routing

* Insert data from DB into show file

* Add insiders featured orgs

* Update link in footer

* Dont select everything

* Update app/controllers/about/supporting_organisations_controller.rb

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

* Update app/views/about/supporter_packt.html.haml

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

* Remove commented lines

* Use support explanation on index

* Add initial advert and rename supporting-orgs to partners

* Add perks

* Tweaks

* WIP

* Calm down rubocop

* Fix schema

* Log advert impressions

* Log track too

* Add logging and redirecting of clicks

* Add perks commands

* Add CI

* Add to more places

* Use latest gem

* Add more to perks pages

* Responsive tweaks

* Add modal stuff

* Add modal stuff

* Update admin section

* Add React modal to perks

* Update code capsules logos

* Update schema

* Add more tweaks

* Fix factories

* Remove legacy LOC

* Don't render missing adverts

* Strip makers from exercise header

* More test fixes

* Update db/migrate/20230420081308_create_partners.rb

---------

Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>
Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -191,6 +191,11 @@ jobs:
           bundle exec setup_exercism_config
           bundle exec setup_exercism_local_aws
 
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.8.0
+        with:
+          mongodb-version: latest
+
       ###
       # Precompile JS
       - name: Precompile JS
@@ -309,6 +314,11 @@ jobs:
 
       - name: Install packages
         run: sudo apt-get install libvips
+
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.8.0
+        with:
+          mongodb-version: latest
 
       ###
       # Caching using GitHub's caching action
