--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@sector-labs/postcss-inline-class": "^0.0.6",
-    "@stripe/react-stripe-js": "1.4.1",
-    "@stripe/stripe-js": "^1.15.1",
+    "@stripe/react-stripe-js": "^2.1.1",
+    "@stripe/stripe-js": "^1.54.1",
     "@tippyjs/react": "^4.2.5",
     "@types/react-google-recaptcha": "^2.1.5",
     "@xstate/react": "^1.3.1",
