--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@codemirror/lang-cpp": "^0.19.0",
     "@codemirror/lang-java": "^0.19.0",
     "@codemirror/lang-javascript": "^0.19.0",
+    "@codemirror/lang-php": "^0.19.0",
     "@codemirror/lang-python": "^0.19.0",
     "@codemirror/lang-rust": "^0.19.0",
     "@codemirror/legacy-modes": "^0.19.0",
