Don't send icon requests to Rails

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -48,6 +48,18 @@ http {
       proxy_set_header X-Forwarded-Proto https;
       proxy_cache_bypass $http_upgrade;
     }
+    
+    location /favicon.ico {
+        return 404;
+        log_not_found off;
+        access_log    off;
+    }
+    
+    location /apple-touch-icon {
+        return 404;
+        log_not_found off;
+        access_log    off;
+    }
   }
 
   server {
@@ -76,13 +88,14 @@ http {
 
     }
 
-    location = /favicon.ico {
+    location /favicon.ico {
+        return 404;
         log_not_found off;
         access_log    off;
     }
 
-    location = /robots.txt {
-        allow         all;
+    location /robots.txt {
+        return 404;
         log_not_found off;
         access_log    off;
     }
