--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "@typescript-eslint/parser": "^4.4.0",
     "autoprefixer": "^10.4.0",
     "babel-jest": "^26.5.0",
+    "babel-plugin-dynamic-import-node-babel-7": "^2.0.7",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "esbuild-jest": "^0.5.0",
