--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -234,7 +234,7 @@ jobs:
         id: wait-for-opensearch
         env:
           OPENSEARCH_HOST: https://127.0.0.1:${{ job.services.opensearch.ports['9200'] }}
-        run: ./bin/wait_for_opensearch.sh
+        run: ./bin/wait_for_opensearch
 
       ###
       # Run the tests
@@ -398,7 +398,7 @@ jobs:
         id: wait-for-opensearch
         env:
           OPENSEARCH_HOST: https://127.0.0.1:${{ job.services.opensearch.ports['9200'] }}
-        run: ./bin/wait_for_opensearch.sh
+        run: ./bin/wait_for_opensearch
 
       ###
       # Run the tests
