Re-run workflow run when failed

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -236,6 +236,13 @@ jobs:
           OPENSEARCH_HOST: https://127.0.0.1:${{ job.services.opensearch.ports['9200'] }}
         run: ./bin/wait_for_opensearch
 
+      - name: Re-run job if open-search failed to become ready
+        if: ${{ failure() }}
+        env:
+          GH_TOKEN: ${{ secrets.RERUN_WORKFLOWS_PAT }}
+        run: |
+          gh run rerun --failed ${{ github.run_id }}
+
       ###
       # Run the tests
       - name: Run Ruby tests
@@ -399,6 +406,13 @@ jobs:
         env:
           OPENSEARCH_HOST: https://127.0.0.1:${{ job.services.opensearch.ports['9200'] }}
         run: ./bin/wait_for_opensearch
+
+      - name: Re-run job if open-search failed to become ready
+        if: ${{ failure() }}
+        env:
+          GH_TOKEN: ${{ secrets.RERUN_WORKFLOWS_PAT }}
+        run: |
+          gh run rerun --failed ${{ github.run_id }}
 
       ###
       # Run the tests
